2008-08-13  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-status.c: (tracker_status_signal): If we
	are told to signal but there is no TrackerDaemon object created
	yet, don't error, instead drop the signal request. This occurs
	when we start up the daemon with a reindex or first time index.

2008-08-13  Martyn Russell  <martyn@imendio.com>

	* src/tracker-utils/Makefile.am: Added GLib and GIO to the CFLAGS
	and LDFLAGS.

	* src/tracker-utils/tracker-tag.c: Refactored, fixed bugs, etc.

2008-08-13  Martyn Russell  <martyn@imendio.com>

	* src/tracker-utils/tracker-query.c: (get_meta_table_data):
	* src/tracker-utils/tracker-search.c: (get_meta_table_data):
	* src/tracker-utils/tracker-unique.c: (get_meta_table_data): Fix
	for these implementations.

2008-08-13  Martyn Russell  <martyn@imendio.com>

	* src/tracker-utils/tracker-files.c: 
	* src/tracker-utils/tracker-query.c: 
	* src/tracker-utils/tracker-search.c:
	* src/tracker-utils/tracker-stats.c: 
	* src/tracker-utils/tracker-status.c: 
	* src/tracker-utils/tracker-tag.c:
	* src/tracker-utils/tracker-unique.c: Fixed some of the printing
	where \n was omitted. Also fixed the includes for the Win32
	compatibility. 

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (main): Now shutdown the indexer
	when we shutdown. 

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/tracker-utils/tracker-query.c:
	* src/tracker-utils/tracker-search.c:
	* src/tracker-utils/tracker-unique.c: Fixed a memory leak.

	* src/tracker-utils/tracker-stats.c: Clean up.
	
2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/tracker-utils/tracker-files.c:
	* src/tracker-utils/tracker-meta-folder.c:
	* src/tracker-utils/tracker-query.c:
	* src/tracker-utils/tracker-search.c:
	* src/tracker-utils/tracker-stats.c:
	* src/tracker-utils/tracker-status.c:
	* src/tracker-utils/tracker-tag.c: Fix the tracker.h include to
	omit the "src/" part since we set up the include path in the
	CFLAGS. 